CSS/project.css
#PAGE_projects {
    display: flex;
    flex-flow: column nowrap;
    justify-content: flex-start;
    align-items: flex-start;
    width: 100vw;
    margin-top: var(--navbar_height);
    padding: 20px;
}
#PAGE_projects .section {
    display: flex;
    flex-flow: column nowrap;
    justify-content: flex-start;
    align-items: flex-start;
    width: 100%;
    min-height: calc((100vh - 40px - var(--navbar_height)) / 3);
    max-height: calc((100vh - 40px - var(--navbar_height)) / 3);
    margin-top: 20px 0px;
}
#PAGE_projects h1 {
    display: block;
    width: 100%;
    margin-bottom: 10px;
    font-family: 'Segoe UI', sans-serif;
    font-size: 22px;
    border-bottom: 1px solid black;
}
#PAGE_projects .row {
    display: flex;
    flex-flow: row nowrap;
    justify-content: flex-start;
    align-items: flex-start;
    width: 100%;
}
#PAGE_projects .scrollable_list {
    display: flex;
    flex-flow: column nowrap;
    justify-content: flex-start;
    align-items: flex-start;
    width: 100%;
    min-height: calc((100vh - 40px - var(--navbar_height)) - 41px - 35px);
    max-height: calc((100vh - 40px - var(--navbar_height))- 41px - 35px);
    overflow-x: hidden;
    overflow-y: scroll;
    padding-right: var(--scrollBar_padding);
}

.project_item {
    position: relative;
    display: flex;
    flex-flow: row nowrap;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 60px;
    min-height: 60px;
    max-height: 60px;
    margin: 8px 0px;
    padding: 0px 12px;
    background-color: #FFFFFF23;
    border-radius: 5px;
    box-shadow: 0px 0px 9px -5px white inset, 0px 4px 16px -16px black;
    backdrop-filter: blur(7px);
    
}
.project_item > * {
    position: relative;
    display: block;
    height: 50%;
    padding: 0px 5px;
    font-size: 30px;
    pointer-events: none;
}

#PAGE_project_page{
    display: flex;
    flex-flow: column nowrap;
    justify-content: flex-start;
    align-items: flex-start;
    width: 100%;
    margin-top: var(--navbar_height);
}

#colour_ribbon{
    position: relative;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    width: 100%;
    min-height: 20px;
    box-shadow: 0px 0px 10px -7px black;
}
#colour_ribbon .color_button{
    width: 100%;
    height: 100%;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    cursor: pointer;
}
#colour_ribbon .color_button:hover{
    border: 3px solid black;
}

.inner_project{
    display: flex;
    flex-direction: row;
    justify-content: center;
    width: 100%;
    height: 100%;
    padding: 10px 20px 40px;
}

#weekly_buttons{
    display: flex;
    flex-direction: column;
    height: 100%;
    width: 150px;
    overflow-y: scroll;
    padding-right: var(--scrollBar_padding);
}

#weekly_buttons button{
    width: 100%;
    height: 32px;
}

#timesheet_container{
    display: flex;
    flex-direction: row;
    height: 100%;
    width: 100%;
    overflow-y: scroll;
    overflow-x: scroll;
    padding-right: var(--scrollBar_padding);
    margin-left: 25px;
}

#timesheet_container > div{
    display: flex;
    flex-direction: column;
    width: 75px;
    min-width: 75px;
    height: fit-content;
    user-select: none;
    text-align: center;
}

#timesheet_container > div > div{
    background-color: white;
    width: 100%;
    height: 25px;
    border-left: 1px solid black;
    border-right: 1px solid black;
}

#timesheet_container #ts_col_Z{
    width: 125px;
    min-width: 125px;
    left: 0px;
    position: sticky;
    margin-top: 25px;
    z-index: 20;
}
#timesheet_container #ts_col_Z > div:nth-child(1){
    position: fixed;
    left: calc(20px + 150px + 5px);
    top: calc(var(--navbar_height) + 20px + 10px);
    width: 125px;
    min-width: 125px;
    z-index: 20;
}

#timesheet_container .timesheet_total{
    width: calc(75px * 14);
    min-width: calc(75px * 14);
    border: 1px solid black;
}

#timesheet_container .timesheet_week_total{
    width: calc(75px * 7);
    min-width: calc(75px * 7);
    border: 1px solid black;
}

#timesheet_container .timesheet_day_total{
    border: 1px solid black;
}

#timesheet_container .timesheet_colour_total{
    border: 1px solid black;
}

#timesheet_container .timesheet_cells{
    border-top: 1px dashed black;
    border-bottom: 1px dashed black;
}

#timesheet_container .timesheet_date{
    border-top: 1px dashed black;
    border-bottom: 1px dashed black;
    top: 0px;
    position: sticky;
    z-index: 1;
}

#timesheet_container .timesheet_time{
    border-top: 1px dashed black;
    border-bottom: 1px dashed black;
    
}

